ASM-2825 Refactor: Standardize code formatting, enhance dependency injection, simplify tests, and improve type safety across services and models